# robo-ducks-core

./: .gitignore  CMakeLists.txt  README.md  Readme.adoc  pythonRequirements.txt
home/configuration/location/default/: field-small.json  map.json  (+5 more)
home/motions/: genuflectCatchFront.motion2  jumpingCatchLeft.motion2  jumpingCatchRight.motion2  stationaryCatchLeft.motion2  stationaryCatchRight.motion2
home/poses/: Kneel.pose
scripts/: compileAndStart.sh  gammaray  gammaray_hulks  gammaray_old  midas  setup  upload  uploadAllV6.sh  uploadAllV6G.sh
scripts/files/: install  ssh_key  ssh_key.pub
scripts/files_old/: install
scripts/legacy/: compile  upload
scripts/lib/: upload.sh
scripts/midaslib/: command.py  commonparsers.py  compiler.py  naocom.py  uploader.py
scripts/midaslib/commands/: compile.py  copy.py  kill.py  run.py  setup.py  shutdown.py  start.py  touch.py  upload.py  wlan.py
setup/: install.sh
src/brain/: Brain.cpp  BrainThread.cpp  CMakeLists.txt
src/brain/Behavior/: ActionCommand.hpp  BallSearchMapManager.cpp  BehaviorModule.cpp  BehaviorModule.hpp  BehaviourState.cpp  BehaviourState.hpp  BishopPositionProvider.cpp  DataSet.hpp  DataSetProvider.cpp  DataSetProvider.hpp  DefendingPositionProvider.cpp  DuckBallSearchPositionProvider.cpp  DuckBallSearchPositionProvider.hpp  DuckBehaviorModule.cpp  DuckBehaviorModule.hpp  DuckDataSet.hpp  DuckUnits.h  DucksActionCommand.hpp  DucksBallSearchMapManager.cpp  DucksBallSearchMapManager.hpp  DucksBallSearchPositionProvider.cpp  DucksBallSearchPositionProvider.hpp  DucksBehaviorModule.cpp  DucksBehaviorModule.hpp  DucksBishopActionProvider.cpp  DucksBishopActionProvider.hpp  DucksDataSet.hpp  DucksDefenderActionProvider.cpp  DucksDefenderActionProvider.hpp  DucksDesperationProvider.cpp  DucksDesperationProvider.hpp  DucksKeeperActionProvider.cpp  DucksKeeperActionProvider.hpp  DucksPOIProvider.cpp  DucksPOIProvider.hpp  DucksPlayingRoleProvider.cpp  DucksPlayingRoleProvider.hpp  DucksStrikerActionProvider.cpp  DucksStrikerActionProvider.hpp  DucksTimeToReachBallProvider.cpp  (+10 more)
src/brain/Behavior/BehaviorUnits/: NotPenalized.hpp  RootBehavior.hpp
src/brain/Behavior/BehaviorUnits/GameStates/: PenaltyShootout.hpp  Playing.hpp  Ready.hpp
src/brain/Behavior/BehaviorUnits/Roles/: Defender.hpp  Striker.hpp
src/brain/Behavior/BehaviorUnits/Skills/: Kick.hpp
src/brain/Behavior/DucksBehaviour/: RootBehaviour.hpp
src/brain/Behavior/DucksBehaviour/Roles/: Bishop.hpp  Defender.hpp  Keeper.hpp  None.hpp  Roles.hpp  Striker.hpp  SupportStriker.hpp
src/brain/Behavior/DucksBehaviour/States/: Initial.hpp  Penalized.hpp  Playing.hpp  Ready.hpp  Set.hpp  Started.hpp  State.hpp
src/brain/Behavior/DucksBehaviour/Utils/: KickBall.hpp  WalkTo.hpp
src/brain/GameController/: GameController.cpp
src/brain/Interface/: AudioPlayer.cpp  AudioPlayer.hpp  AudioReceiver.cpp  AudioReceiver.hpp
src/brain/Knowledge/Ball/: BallFilter.cpp  DucksBallPredictor.cpp  DucksBallPredictor.hpp
src/brain/Knowledge/LandmarkFilter/: LandmarkFilter.cpp
src/brain/Knowledge/Position/: FieldInfo.cpp  FieldInfo.hpp  ParticlePositionKnowledge.cpp  ParticlePositionKnowledge.hpp  PoseHypothesis.cpp  PoseHypothesis.hpp  UKFPositionKnowledge.cpp  UKFPositionKnowledge.hpp
src/brain/Modules/CollisionDetection/: CollisionDetector.cpp
src/brain/Modules/HeadOffModule/: HeadOffModule.cpp  HeadOffModule.hpp
src/brain/Modules/WhistleDetection/: FakeWhistleDetection.cpp  FakeWhistleDetection.hpp  WhistleDetection.cpp  WhistleDetection.hpp
src/brain/SPLNetwork/: DucksMessage.cpp  DucksMessage.hpp  DucksSPLMessageReceiver.cpp  DucksSPLMessageReceiver.hpp  DucksSPLMessageTransmitter.cpp  DucksSPLMessageTransmitter.hpp  SPLMessageReceiver.cpp  SPLMessageTransmitter.cpp  SPLNetworkService.cpp
src/motion/: CMakeLists.txt  Motion.cpp
src/motion/BodyPoseEstimation/: BodyPoseEstimation.cpp
src/motion/Interface/: JointCommandSender.cpp  JointCommandSender.hpp  MotionDispatcher.cpp
src/motion/Kick/: Kick.cpp  Kick.hpp
src/motion/Kneeler/: Kneeler.cpp  Kneeler.hpp
src/motion/LEDHandler/: LEDHandler.cpp  LEDHandler.hpp
src/motion/Odometry/: IMUOdometry.cpp  SensorFusion.cpp
src/motion/Poser/: Poser.cpp
src/motion/Safety/: FallManager.cpp  FallManager.hpp
src/tuhhsdk/: CMakeLists.txt  SharedObject.cpp  SharedObjectManager.cpp  print.h  tuhh 2.cpp  tuhh.cpp
src/tuhhsdk/Data/: AudioData.hpp  AudioRequest.hpp  BallData.hpp  BallSearchMap.hpp  CameraMatrix.hpp  ChestLEDRequest.hpp  Desperation.hpp  DuckBallSearchPosition.hpp  DuckStrikerAction.hpp  DucksBallPrediction.hpp  DucksBishopAction.hpp  DucksDefenderAction.hpp  DucksDefendingPosition.hpp  DucksPOI.hpp  DucksStrikerAction.hpp  EarLEDRequest.hpp  EyeLEDRequest.hpp  FieldDimensions.hpp  FieldZones.hpp  GameControllerState.hpp  HeadMatrixBuffer.hpp  HeadOffData.hpp  ImageSegments.hpp  KeeperAction.hpp  KneelerOutput.hpp  LEDRequest.hpp  LandmarkModel.hpp  MotionRequest.hpp  PlayingRoles.hpp  RobotPosition.hpp  StrikerAction.hpp  ThoughtControlRequest.hpp  ThoughtData.hpp  WorldState.hpp
src/tuhhsdk/Definitions/: BHULKsStandardMessage.cpp  BHULKsStandardMessage.h  DucksStandardMessage.cpp  DucksStandardMessage.h  SPLStandardMessage.h
src/tuhhsdk/Framework/: Module.hpp  Thread.cpp
src/tuhhsdk/Modules/: NaoProvider.cpp  Poses.cpp  Poses.h
src/tuhhsdk/Tools/: Time.hpp
src/vision/: CMakeLists.txt
toolchain/: .gitignore  Toolchains.adoc
tools/SimRobot/: CMakeLists.txt  build_simrobot  compileAndStart.sh
tools/SimRobot/Scenes/: .1PlayerRoboDucks.ros2.icloud  .2PlayersRoboDucks.ros2.icloud  0Players.ros2  1Player.ros2  1PlayerRoboDucks.ros2  2Players.ros2  2PlayersRoboDucks.ros2  DefenderStriker.ros2  Players12.ros2  Players12Boxx.ros2  Players12_12.ros2  RoboDucksKickSetup.ros2  TeamRoboDucks.ros2
tools/helferlein/: .mock-debug-msg.json.icloud  mock-debug-msg.json
tools/helferlein/helferlein/: .gitignore  README.md  angular.json  karma.conf.js  main.js  naonet.js  package-lock.json  package.json
tools/mate/: README.md  environment.yml  run.py  start.sh
webots/: motions  poses
(+205 files in other folders)
